--- a/programs/sol_escrow/Cargo.toml
+++ b/programs/sol_escrow/Cargo.toml
@@ -14,8 +14,8 @@ cpi = ["no-entrypoint"]
 no-entrypoint = []
 no-idl = []
 no-log-ix-name = []
-idl-build = ["anchor-lang/idl-build"]
+idl-build = []
 
 [dependencies]
-anchor-lang = { version = "0.31.1", features = ["idl-build", "init-if-needed"] }
-anchor-spl = { version = "0.31.1", features = ["idl-build"] }
+anchor-lang = { version = "0.30.0", features = ["init-if-needed"] }
+anchor-spl = "0.30.0"
